# CarProject

./: alembic.ini  db.sqlite3  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 2024_07_08_2316-053262842a6a_create_tables.py
api_v1_version/car/: crud.py  schemas.py  views.py
api_v1_version/car_and_owner/: crud.py  views.py
api_v1_version/owner/: crud.py  schemas.py  views.py
app/: pyproject.toml
core/: config.py
core/models/: __init__.py  base.py  car.py  db_helper.py  owner.py
