[tool.poetry]
name = "carproject"
version = "0.1.0"
description = "car project for restudy fastapi"
authors = ["gfedorov911 <fedorov22134@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.8.2"
sqlalchemy = "^2.0.31"
aiosqlite = "^0.20.0"
unicorn = {extras = ["standard"], version = "^2.0.1.post1"}
fastapi = "^0.111.0"
pydantic-settings = "^2.3.4"
alembic = "^1.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
